Fix invalid forms going out of container.

--- a/Client/src/app/components/login/login.component.css
+++ b/Client/src/app/components/login/login.component.css
@@ -31,7 +31,7 @@ select.form-control:focus {
 
 .wrapper {
     width: 500px;
-    height: 600px;
+    min-height: 570px;
 
     -webkit-box-shadow: 0px 0px 90px 5px rgba(171,172,173,1);
     -moz-box-shadow: 0px 0px 90px 5px rgba(171,172,173,1);
@@ -102,5 +102,7 @@ select.form-control:focus {
     height: 40px;
     border-radius: 20px;
 }
-
+small {
+  display: block;
+}
 
